<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ShortenLinks.ShortenLinkFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:labelFor="@+id/long_link"
        android:text="@string/input_link"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/long_link"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:autofillHints="Long Link"
            android:ems="10"
            android:inputType="text"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/placeholder_link"
            android:textSize="24sp" />

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:enabled="false"
            android:text="@string/submit_button"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:visibility="gone"
        app:icon="@android:drawable/ic_menu_share" />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/error_label"
        android:textColor="#F44336"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone" />

</LinearLayout>