<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/manage_links_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ManageLinks.ManageLinksFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:text="@string/manage_link_label"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/manage_error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/error_label"
        android:textColor="#F44336"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/loading_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/waiting_label"
        android:textColor="#FF9800"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/link_list_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>